--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title></title>
 </head>
 <body>
-    <h1> LISTA DE ATIVIDADES NA SEMANA.</h1>
+    <h1> Macarrão ao molho branco.</h1>
     
-    <p> Aqui estou mostrando com será a rotina da semana do dia 26/02 até 01/03</p>
+    <p> Como fazer macarrão ao molho branco</p>
     
-    <img src="bara01.png" alt="logo do barão">
+    <img src="macmolbranco.jpg" alt="macarrão ao molho branco">
     <img src="BARAO2.jpg" alt="foto do Barão">
     <img src="NEWTON1.jpg" alt="logo do Newton">
     <img src="NEWTON2.jpg" alt="foto do Newton">
